# App-Review-Insights-Analyser

./: .dockerignore  .env.example  .gitignore  Architecture.md  Dockerfile  Implementationplan.md  README.md  docker-compose.yml  problemstatement.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  weekly-pulse.yml
.streamlit/: config.toml
agent/: __init__.py  __main__.py  cluster_settings.py  config.py  logging.py  orchestrator.py  storage.py  types.py
agent/clustering/: __init__.py  embeddings.py  models.py  service.py
agent/email/: resend_ops.py
agent/ingestion/: __init__.py  appstore.py  filters.py  models.py  playstore.py  service.py
agent/mcp_client/: __init__.py  docs_ops.py  gmail_ops.py  session.py
agent/renderer/: __init__.py  docs_tree.py  email_html.py  note.py  service.py  validators.py
agent/summarization/: __init__.py  llm.py  models.py  service.py
data/: products.yaml
docs/: runbook.md
docs/phases/phase-0-foundations/: edge-cases.md  evaluations.md
docs/phases/phase-1-ingestion/: edge-cases.md  evaluations.md
docs/phases/phase-2-clustering/: edge-cases.md  evaluations.md
docs/phases/phase-3-summarization/: edge-cases.md  evaluations.md
docs/phases/phase-4-renderer/: edge-cases.md  evaluations.md
mcp_servers/: __init__.py  docs_server.py  gmail_server.py  services.py
templates/: doc_section.schema.json
tests/: test_cli_smoke.py  test_clustering_phase2.py  test_ingestion_phase1.py  test_orchestrator_phase7.py  test_publish_phase56.py  test_renderer_phase4.py  test_summarization_phase3.py
(+6 files in other folders)
