[project]
name = "weekly-pulse-agent"
version = "0.1.0"
description = "Weekly product review pulse agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "sqlite-vec==0.1.6",
  "jinja2==3.1.6",
  "typer==0.12.5",
  "click==8.1.7",
  "rich==13.9.4",
  "structlog==24.4.0",
  "python-dotenv==1.2.1",
  "pyyaml==6.0.2",
  "httpx==0.28.1",
  "google-play-scraper==1.2.7",
  "numpy==2.2.5",
  "scikit-learn==1.6.1",
  "umap-learn==0.5.7",
  "hdbscan==0.8.40",
  "keybert==0.9.0",
  "sentence-transformers==3.4.1",
  "openai==1.76.0",
  "jsonschema==4.23.0",
  "fastmcp==2.12.5",
  "streamlit==1.44.1",
  "google-api-python-client==2.179.0",
  "google-auth-oauthlib==1.2.2",
  "google-auth-httplib2==0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.11.7",
  "mypy==1.15.0",
  "types-PyYAML==6.0.12.20250402",
]

[project.scripts]
pulse = "agent.__main__:app"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["hdbscan", "umap", "sklearn.*", "keybert", "sentence_transformers", "openai", "jsonschema"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
